--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,11 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
-            "aot": true
+            "aot": true,
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ol/ol.css"
+            ]
           }
         },
         "serve": {
